--- a/index.html
+++ b/index.html
@@ -345,27 +345,30 @@
 
     <div class="container background_books">
         <div class="discount">
-            <h1> Discount for novel</h1>
-            <p><span class="font_comment_text"> In hac habitasse platea dictumst. <br>
-                            Vivamus adipiscing fermentum quam <br> volutpat aliquam.</span></p>
-            <div class="procent">
-                <div class="block_discount"><p><span class="books_font_orange">
-                                1 book - 10% </span></p>
+            <div class="about_discounts">
+                <h1> Discount for novel</h1>
+                <p><span class="font_comment_text"> In hac habitasse platea dictumst. <br>
+                                Vivamus adipiscing fermentum quam <br> volutpat aliquam.</span></p>
+            </div>
+            <div class="discount_procent">
+                <div class="block_discount">
+                    <a href="#"><span class="books_font_orange">1 book - 10%</span></a>
                 </div>
-                <div class="block_discount"><p><span class="books_font_orange">
-                                2 books - 25% </span></p>
+                <div class="block_discount">
+                    <a href="#"><span class="books_font_orange">2 books - 25% </span>
+                    </a>
                 </div>
-                <div class="block_discount"><p><span class="books_font_orange">
-                               more than 3 - 10% </span></p>
+                <div class="block_discount"><a href="#"><span class="books_font_orange">
+                               more than 3 - 10% </span></a>
                 </div>
             </div>
             <div class="clearfix"></div>
+            <div class="container_button">
+                <a href="#" class="btn">All books</a>
+            </div>
 
         </div>
-        <div class="clearfix"></div>
-        <div class="button_all_books">
-            <button>All books</button>
-        </div>
+
     </div> <!-- end container -->
 
     <div class="container">
