--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     </div>
                     <img src="img/cover.png" alt="bookharry" width="412" height="595">
                 </div>
-                <div class="img_cover">
+                <div class="img_book">
                     <img src="img/hogwarts1.png" alt="hogwards" width="417" height="735">
                 </div>
                 <div class="clearfix"></div>
@@ -247,7 +247,7 @@
                     </div>
                 </div>
                 <div class="section_photo_autor">
-                    <img src="img/fowles_djaongly.png" alt="photo_autor" style="width: 331px; height: 497px;">
+                    <img src="img/fowles_djaongly.png" alt="photo_autor" style="width: 307px; height: 473px;">
                 </div>
                 <div class="section_book_autor">
                     <h3>About</h3>
@@ -279,19 +279,19 @@
         <div class="literature_news">
             <ul>
                 <li><a href="#"><img src="img/111.png" alt="picture" width="342" height="553"></a>
-                    <h2>How literature can help people cope with mental health problems</h2></p>
-                    <p><span class="font_orange">Nathan Sandoval </span> <span
-                            class="fontcaption_grey"> | 15.10.16</span></p>
+                    <h2><a href="#">How literature can help people cope with mental health problems</a></h2>
+                    <a href="#"><span class="font_orange">Nathan Sandoval </span> <span
+                            class="fontcaption_grey"> | 15.10.16</span></a>
                 </li>
                 <li><a href="#"><img src="img/222.png" alt="picture" width="342" height="553"></a>
-                    <h2>Sales of 'Harry Potter and the Cursed Child' script book hit </h2></p>
-                    <p><span class="font_orange">Jacqueline Taylor</span> <span
-                            class="fontcaption_grey"> | 23.10.16</span></p>
+                    <h2><a href="#">Sales of 'Harry Potter and the Cursed Child' script book hit</a> </h2>
+                    <a href="#"><span class="font_orange">Jacqueline Taylor</span> <span
+                            class="fontcaption_grey"> | 23.10.16</span></a>
                 </li>
                 <li><a href="#"><img src="img/333.png" alt="picture" width="342" height="553"></a>
-                    <h2>Marvel introduces character Riri Williams, a woman who takes ov</h2>
-                    <p><span class="font_orange">Elizabeth Dixon </span> <span
-                            class="fontcaption_grey">| 16.10.15</span></p>
+                    <h2><a href="">Marvel introduces character Riri Williams, a woman who takes ov</a></h2>
+                    <a href="#"><span class="font_orange">Elizabeth Dixon </span> <span
+                            class="fontcaption_grey">| 16.10.15</span></a>
                 </li>
             </ul>
         </div>
