add responsive and nth-child

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta property="og:image" content=""/>
     <title>Bookworm</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">
 
 </head>
 <body>
@@ -18,6 +19,7 @@
             <nav class="menu container">
                 <div class="menu_logo">
                 </div>
+
                 <ul class="menu_list">
                     <li><a href="#">Books</a></li>
                     <li><a href="#">Writers</a></li>
@@ -61,21 +63,23 @@
     <div class="container">
         <div class="presentation_books">
             <div class="presentation_book">
-                <div class="presentation_book_img">
-                    <img src="img/bitmap.png" alt="Bitmap" width="160" height="249">
-                </div>
                 <div class="presentation_text">
                     <h2> The Da Vinci Code </h2>
                     <span class="fontcaption_orange">Dan Brown</span><span class="font_vote"> 5 <img src="img/star.png" width="18" height="17" alt="star"> </span>
                 </div>
+                <div class="presentation_book_img">
+                    <img src="img/bitmap.png" alt="Bitmap" width="180" >
+                </div>
+
                 <div class="clearfix"></div>
             </div>
             <div class="presentation_book">
-                <div class="presentation_book_img">
-                    <img src="img/images.png" alt="Images" width="180" height="272">
-                </div>
+
                 <div class="presentation_text">
                     <h2>A major update in the Detective section </h2>
+                </div>
+                <div class="presentation_book_img">
+                    <img src="img/images.png" alt="Images" width="180" >
                 </div>
                 <div class="clearfix"></div>
             </div>
@@ -144,32 +148,32 @@
             <div class="books">
                 <ul>
                     <li>
-                        <a href=""><img src="img/books/1.png" alt="book" width="146" height="227"></a>
+                        <a href="#"><img src="img/books/1.png" alt="book" width="146" height="227"></a>
                         <p><span class="books_font_grey">Opaque Region</span></p>
                         <p><span class="books_font_orange">Carlos Fuentes</span></p>
                     </li>
                     <li>
-                        <a href=""><img src="img/books/4.png" alt="book" width="146" height="227"</a>
+                        <a href="#"><img src="img/books/4.png" alt="book" width="146" height="227"></a>
                         <p><span class="books_font_grey">The Meandering Corpse </span></p>
                         <p><span class="books_font_orange">Richard Prather</span></p>
                     </li>
                     <li>
-                        <a href=""><img src="img/books/9.png" alt="book" width="146" height="227"</a>
+                        <a href="#"><img src="img/books/9.png" alt="book" width="146" height="227"></a>
                         <p><span class="books_font_grey">English Detective Stories</span></p>
                         <p><span class="books_font_orange">Patricia Craig</span></p>
                     </li>
                     <li>
-                        <a href=""><img src="img/books/7.png" alt="book" width="146" height="227"></a>
+                        <a href="#"><img src="img/books/7.png" alt="book" width="146" height="227"></a>
                         <p><span class="books_font_grey">Die Like a Dog</span></p>
                         <p><span class="books_font_orange">Brett Halliday</span></p>
                     </li>
                     <li>
-                        <a href=""><img src="img/books/10.png" alt="book" width="146" height="227"></a>
+                        <a href="#"><img src="img/books/10.png" alt="book" width="146" height="227"></a>
                         <p><span class="books_font_grey">1984 </span></p>
                         <p><span class="books_font_orange">George Orwell</span></p>
                     </li>
                     <li>
-                        <a href=""><img src="img/books/11.png" alt="book" width="146" height="227"></a>
+                        <a href="#"><img src="img/books/11.png" alt="book" width="146" height="227"></a>
                         <p><span class="books_font_grey">The Lord of the Rings</span></p>
                         <p><span class="books_font_orange">J.R.R. Tolkien</span></p>
                     </li>
@@ -496,7 +500,7 @@
             </div> <!-- footer_section_about -->
             <div class="footer_section_active">
                 <h2>Stay in touch</h2>
-                <form action="" class="subscribe">
+                <form action="mailto:vlad@htmlbook.ru" class="subscribe_form">
                     <input type="email" id="fname" name="fname" placeholder="Your E-mail">
                     <button class="subscribe_button" type="submit" >Subscribe </button>
                     <!--<img src="img/icons_svg/mail.svg" alt="mail"> -->
