change padding all menu

--- a/index.html
+++ b/index.html
@@ -233,6 +233,8 @@
                     <li><a href="#">Dan Brown</a></li>
                     <li><a href="#">Rich Riordan</a></li>
                 </ul>
+                <div class="clearfix"></div>
+                <hr>
             </nav>
             <div class="literature_writes">
                 <div class="section_about_autor">
@@ -410,39 +412,20 @@
                 <span class="btn">  <a href="#" class="btn">All books</a></span>
             </div>
             <div class="partners">
-                <div class="partners_block">
-                    <ul>
-                        <li><a href="#"><img src="img/partners/company.png" alt="logo" width="147" height="62"></a>
-                        </li>
-                        <li><a href="#"><img src="img/partners/sanctum.png" alt="logo"
-                                             style="width: 72px; height: 72px;"></a></li>
-                        <li><a href="#"><img src="img/partners/macmillan.png" alt="logo" width="92" height="51"></a>
-                        </li>
-                        <li><a href="#"><img src="img/partners/penguin.png" alt="logo" width="133" height="67"></a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="partners_block">
-                    <ul>
-                        <li><a href="#"><img src="img/partners/littlebrown.png" alt="logo"
-                                             width="82" height="81"></a></li>
-                        <li><a href="#"><img src="img/partners/vintagebooks.png" alt="logo"
-                                             width="90" height="60"></a></li>
-                        <li><a href="#"><img src="img/partners/FarrarStrausGiroux.png" alt="logo"
-                                             width="159" height="120"></a></li>
+                    <ul class="partners_block">
+                        <li><a href="#"><img src="img/partners/company.png" alt="logo" width="147" height="62"></a></li>
+                        <li><a href="#"><img src="img/partners/sanctum.png" alt="logo" width="72" height="72px"></a></li>
+                        <li><a href="#"><img src="img/partners/macmillan.png" alt="logo" width="92" height="51"></a></li>
+                        <li><a href="#"><img src="img/partners/penguin.png" alt="logo" width="133" height="67"></a></li>
+                        <li><a href="#"><img src="img/partners/littlebrown.png" alt="logo" width="82" height="81"></a></li>
+                        <li><a href="#"><img src="img/partners/vintagebooks.png" alt="logo" width="90" height="60"></a></li>
+                        <li><a href="#"><img src="img/partners/FarrarStrausGiroux.png" alt="logo" width="159" height="120"></a></li>
                         <li><a href="#"><img src="img/partners/AMPlogo.png" alt="logo" width="186" height="74"></a></li>
-                    </ul>
-                </div>
-                <div class="partners_block">
-                    <ul>
                         <li><a href="#"><img src="img/partners/quirk.png" alt="logo" width="64" height="67"></a></li>
                         <li><a href="#"><img src="img/partners/saraband.png" alt="logo" width="115" height="24"></a></li>
                         <li><a href="#"><img src="img/partners/logoevro.png" alt="logo" width="75" height="66"></a></li>
                         <li><a href="#"><img src="img/partners/bloomsbury.png" alt="logo" width="99" height="72"></a></li>
                     </ul>
-                </div>
-
-
             </div>
             <div class="clearfix"></div>
         </div>
@@ -457,6 +440,7 @@
                 <li><a href="#">accessibilliti</a></li>
             </ul>
         </nav>
+        <div class="clearfix"></div>
         <hr>
         <div class="footer_content">
             <div class="footer_section_about">
@@ -507,7 +491,7 @@
                 </form>
                 <hr>
                 <div class="footer_social">
-                    <h2>Follow as</h2>
+                    <h2>Follow us</h2>
                     <div class="social_icon">
                             <ul class="menu_social">
                                 <li><a href="#"><img src="img/icons_svg/facebook.svg" alt="facebook"></a></li>
@@ -516,7 +500,6 @@
                                 <li><a href="#"><img src="img/icons_svg/instagram.svg" alt="instagram"></a></li>
                             </ul>
                     </div>
-
                 </div>
             </div>
             <div class="clearfix"></div>
