--- a/index.html
+++ b/index.html
@@ -110,115 +110,104 @@
     </div>
 
     <div class="container">
-        <div class="wraper_books">
             <div class="books">
-                <ul>
-                    <li>
-                        <a href=""><img src="img/books/book1.png" alt="book" width="146" height="227"></a>
-                        <p><span class="books_font_grey">Opaque Region </span></p>
-                        <p><span class="books_font_orange">Carlos Fuentos</span></p>
-                    </li>
-                    <li>
-                        <a href=""><img src="img/books/2.png" alt="book" width="146" height="227"></a>
-                        <p><span class="books_font_grey">The Meandering Corpsep </span></p>
-                        <p><span class="books_font_orange">Richard & Prather</span></p>
-                    </li>
-                    <li>
-                        <a href=""><img src="img/books/5.png" alt="book" width="146" height="227"></a>
-                        <p><span class="books_font_grey">English Detective Stories </span></p>
-                        <p><span class="books_font_orange"> Patricia Craig</span></p>
-                    </li>
-                    <li>
-                        <a href=""><img src="img/books/3.png" alt="book" width="146" height="227"></a>
-                        <p><span class="books_font_grey">Die Like a Dog</span></p>
-                        <p><span class="books_font_orange"> Brett Halliday</span></p>
-                    </li>
-                    <li>
-                        <a href=""><img src="img/books/6.png" alt="book" width="146" height="227"></a>
-                        <p><span class="books_font_grey">1984 </span></p>
-                        <p><span class="books_font_orange">George Orwell</span></p>
-                    </li>
-                    <li>
-                        <a href=""><img src="img/books/33.png" alt="book" width="146" height="227"></a>
-                        <p><span class="books_font_grey">The Lord of the Ring</span>s</p>
-                        <p><span class="books_font_orange">J.R.R. Tolkien</span></p>
-                    </li>
-                </ul>
-            </div>
-            <div class="books">
-                <ul>
-                    <li>
-                        <a href="#"><img src="img/books/1.png" alt="book" width="146" height="227"></a>
-                        <p><span class="books_font_grey">Opaque Region</span></p>
-                        <p><span class="books_font_orange">Carlos Fuentes</span></p>
-                    </li>
-                    <li>
-                        <a href="#"><img src="img/books/4.png" alt="book" width="146" height="227"></a>
-                        <p><span class="books_font_grey">The Meandering Corpse </span></p>
-                        <p><span class="books_font_orange">Richard Prather</span></p>
-                    </li>
-                    <li>
-                        <a href="#"><img src="img/books/9.png" alt="book" width="146" height="227"></a>
-                        <p><span class="books_font_grey">English Detective Stories</span></p>
-                        <p><span class="books_font_orange">Patricia Craig</span></p>
-                    </li>
-                    <li>
-                        <a href="#"><img src="img/books/7.png" alt="book" width="146" height="227"></a>
-                        <p><span class="books_font_grey">Die Like a Dog</span></p>
-                        <p><span class="books_font_orange">Brett Halliday</span></p>
-                    </li>
-                    <li>
-                        <a href="#"><img src="img/books/10.png" alt="book" width="146" height="227"></a>
-                        <p><span class="books_font_grey">1984 </span></p>
-                        <p><span class="books_font_orange">George Orwell</span></p>
-                    </li>
-                    <li>
-                        <a href="#"><img src="img/books/11.png" alt="book" width="146" height="227"></a>
-                        <p><span class="books_font_grey">The Lord of the Rings</span></p>
-                        <p><span class="books_font_orange">J.R.R. Tolkien</span></p>
-                    </li>
-                </ul>
-            </div>
-            <div class="books">
-                <ul>
-                    <li>
-                        <a href=""><img src="img/books/12.png" alt="book" width="146" height="227"></a>
-                        <p><span class="books_font_grey">The french lieutenents woman</span></p>
-                        <p><span class="books_font_orange">J.R.R. John Fowles</span></p>
-                    </li>
-                    <li>
-                        <a href=""><img src="img/books/13.png" alt="book" width="146" height="227"></a>
-                        <p><span class="books_font_grey">Fantastic beasts</span></p>
-                        <p><span class="books_font_orange">J.K. Rowling  </span></p>
-                    </li>
-                    <li>
-                        <a href=""><img src="img/books/14.png" alt="book" width="146" height="227"></a>
-                        <p><span class="books_font_grey">Hollow city</span></p>
-                        <p><span class="books_font_orange">Ransom Riggs</span></p>
-                    </li>
-                    <li>
-                        <a href=""><img src="img/books/15.png" alt="book" width="146" height="227"></a>
-                        <p><span class="books_font_grey">The collector</span></p>
-                        <p><span class="books_font_orange">John Fowles</span></p>
-                    </li>
-                    <li>
-                        <a href=""><img src="img/books/16.png" alt="book" width="146" height="227"></a>
-                        <p><span class="books_font_grey">The magus</span></p>
-                        <p><span class="books_font_orange">John Fowles</span></p>
-                    </li>
-                    <li>
-                        <a href=""><img src="img/books/17.png" alt="book" width="146" height="227"></a>
-                        <p><span class="books_font_grey">Everything I Never Told You</span></p>
-                        <p><span class="books_font_orange">Celeste Ng</span></p>
-                    </li>
-                </ul>
-            </div>
-        </div>
+                    <div class="book-item">
+                        <a href="#"><img class="book-img" src="img/books/book1.png" alt="Cover he Opaque Region" width="146" height="227"></a>
+                        <a class="book-title">Opaque Region</a>
+                        <a class="book-author">Carlos Fuentos</a>
+                    </div>
+                    <div class="book-item">
+                        <a href="#"><img class="book-img" src="img/books/2.png" alt="Cover he Meandering Corpse" width="146" height="227"></a>
+                        <a class="book-title">The Meandering Corpse</a>
+                        <a class="book-author">Richard & Prather</a>
+                    </div>
+                    <div class="book-item">
+                        <a href="#"><img class="book-img" src="img/books/5.png" alt="Cover he English Detective Stories" width="146" height="227"></a>
+                        <a class="book-title">English Detective Stories</a>
+                        <a class="book-author">Patricia Craig</a>
+                    </div>
+                    <div class="book-item">
+                        <a href="#"><img class="book-img" src="img/books/3.png" alt="Cover he Die Like a Dog" width="146" height="227"></a>
+                        <a class="book-title">Die Like a Dog</a>
+                        <a class="book-author">Brett Halliday</a>
+                    </div>
+                    <div class="book-item">
+                        <a href="#"><img class="book-img" src="img/books/6.png" alt="Cover he 1984" width="146" height="227"></a>
+                        <a class="book-title">1984 </a>
+                        <a class="book-author">George Orwell</a>
+                    </div>
+                    <div class="book-item">
+                        <a href="#"><img class="book-img" src="img/books/33.png" alt="Cover he The Lord of the Ring" width="146" height="227"></a>
+                        <a class="book-title">The Lord of the Ring</a>
+                        <a class="book-author">J.R.R. Tolkien</a>
+                    </div>
+                    <div class="book-item">
+                        <a href="#"><img class="book-img" src="img/books/1.png" alt="Cover he Opaque Region" width="146" height="227"></a>
+                        <a class="book-title">Opaque Region</a>
+                        <a class="book-author">Carlos Fuentes</a>
+                    </div>
+                    <div class="book-item">
+                        <a href="#"><img class="book-img" src="img/books/4.png" alt="Cover he The Meandering Corpse" width="146" height="227"></a>
+                        <a class="book-title">The Meandering Corpse</a>
+                        <a class="book-author">Richard Prather</a>
+                    </div>
+                    <div class="book-item">
+                        <a href="#"><img class="book-img" src="img/books/9.png" alt="Cover he English Detective Stories" width="146" height="227"></a>
+                        <a class="book-title">English Detective Stories</a>
+                        <a class="book-author">Patricia Craig</a>
+                    </div>
+                    <div class="book-item">
+                        <a href="#"><img class="book-img" src="img/books/7.png" alt="Cover he Die Like a Dog" width="146" height="227"></a>
+                        <a class="book-title">Die Like a Dog</a>
+                        <a class="book-author">Brett Halliday</a>
+                    </div>
+                    <div class="book-item">
+                        <a href="#"><img class="book-img" src="img/books/10.png" alt="Cover he 1984" width="146" height="227"></a>
+                        <a class="book-title">1984</a>
+                        <a class="book-author">George Orwell</a>
+                    </div>
+                    <div class="book-item">
+                        <a href="#"><img class="book-img" src="img/books/11.png" alt="Cover he The Lord of the Rings" width="146" height="227"></a>
+                        <a class="book-title">The Lord of the Rings</a>
+                        <a class="book-author">J.R.R. Tolkien</a>
+                    </div>
+                    <div class="book-item">
+                        <a href="#"><img class="book-img" src="img/books/12.png" alt="Cover he The french lieutenents woman" width="146" height="227"></a>
+                        <a class="book-title">The french lieutenents woman</a>
+                        <a class="book-author">J.R.R. John Fowles</a>
+                    </div>
+                    <div class="book-item">
+                        <a href="#"><img class="book-img" src="img/books/13.png" alt="Cover he Fantastic beasts" width="146" height="227"></a>
+                        <a class="book-title">Fantastic beasts</a>
+                        <a class="book-author">J.K. Rowling</a>
+                    </div>
+                    <div class="book-item">
+                        <a href="#"><img class="book-img" src="img/books/14.png" alt="Cover he Hollow city" width="146" height="227"></a>
+                        <a class="book-title">Hollow city</a>
+                        <a class="book-author">Ransom Riggs</a>
+                    </div>
+                    <div class="book-item">
+                        <a href="#"><img class="book-img" src="img/books/15.png" alt="Cover he The collector" width="146" height="227"></a>
+                        <a class="book-title">The collector</a>
+                        <a class="book-author">John Fowles</a>
+                    </div>
+                    <div class="book-item">
+                        <a href="#"><img class="book-img" src="img/books/16.png" alt="Cover he The magus" width="146" height="227"></a>
+                        <a class="book-title">The magus</a>
+                        <a class="book-author">John Fowles</a>
+                    </div>
+                    <div class="book-item">
+                        <a href=""><img class="book-img" src="img/books/17.png" alt="book" width="146" height="227"></a>
+                        <a class="book-title">Everything I Never Told You</a>
+                        <a class="book-author">Celeste Ng</a>
+                    </div>
+            </div> <!-- end books -->
         <div class="clearfix"></div>
+
         <div class="container_button">
             <a href="#" class="btn">All books</a>
         </div>
-    </div>
+    </div> <!-- emd container -->
     <div class="container">
         <div class="popwrites">
             <h1 class="popwrites_header">Popular writers</h1>
@@ -414,7 +403,7 @@
             <div class="partners">
                     <ul class="partners_block">
                         <li><a href="#"><img src="img/partners/company.png" alt="logo" width="147" height="62"></a></li>
-                        <li><a href="#"><img src="img/partners/sanctum.png" alt="logo" width="72" height="72px"></a></li>
+                        <li><a href="#"><img src="img/partners/sanctum.png" alt="logo" width="72" height="72"></a></li>
                         <li><a href="#"><img src="img/partners/macmillan.png" alt="logo" width="92" height="51"></a></li>
                         <li><a href="#"><img src="img/partners/penguin.png" alt="logo" width="133" height="67"></a></li>
                         <li><a href="#"><img src="img/partners/littlebrown.png" alt="logo" width="82" height="81"></a></li>
