--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
             </div> <!-- footer_section_about -->
             <div class="footer_section_active">
                 <h2>Stay in touch</h2>
-                <form action="mailto:vlad@htmlbook.ru" class="subscribe_form">
+                <form action="" class="subscribe_form">
                     <input type="email" id="fname" name="fname" placeholder="Your E-mail">
                     <button class="subscribe_button" type="submit" >Subscribe </button>
                     <!--<img src="img/icons_svg/mail.svg" alt="mail"> -->
@@ -497,8 +497,21 @@
             <p>&#169; 2016 Bookworm. All rights reserved</p>
         </div>
 
+        <div class="billing">
+        <form action="">
+        <p>
+            <select name="country" id="country" >
+                <option value="">country</option>
+                <option value="">USA</option>
+                <option value="">fr</option>
+                <option value="">kz</option>
+                <option value="">ru</option>
+            </select>
+        </p>
+        </form>
+        </div>
     </div>
-
+        <script src="node_modules/periodicjs.component.selectfx@1.0.0/example"></script>
 </body>
 </html>
 
