--- a/cart.html
+++ b/cart.html
@@ -33,9 +33,8 @@
         </nav>
 
         <div class="cart-wrap container">
-
             <form id="cart" class="form-cart" action="">
-                <legend>Billing address</legend>
+                <h1>Billing address</h1>
                 <div class="billing-address">
                     <div class="leftpart">
                         <div class="gender">
@@ -46,27 +45,40 @@
                             <label for="gen-woman">Woman</label>
                         </div>
                         <div class="firstname">
-                            <input type="text" placeholder="First name">
+                            <input type="text" required placeholder="First name">
                         </div>
                         <div class="lastname">
-                            <input type="text" placeholder="Last name">
+                            <input type="text" required placeholder="Last name">
                         </div>
                         <div class="e-mail">
-                            <input type="email" placeholder="E-mail">
+                            <input type="email" required placeholder="E-mail">
                         </div>
                         <div class="phone">
-                            <input type="text" placeholder="phone">
+                            <input type="text" required placeholder="phone">
                         </div>
                     </div>
                     <div class="rightpart">
                         <div class="address">
-                            <input type="text" placeholder="address">
+                            <input type="text" required placeholder="address">
                         </div>
                         <div class="country">
-                            <input type="text" placeholder="City">
+                            <form action="">
+                                <p>
+                                    <select name="country" id="country" >
+                                        <option value="">country</option>
+                                        <option value="">USA</option>
+                                        <option value="">fr</option>
+                                        <option value="">kz</option>
+                                        <option value="">ru</option>
+                                    </select>
+                                </p>
+                            </form>
+                        </div>
+                        <div class="city">
+                            <input type="text" required placeholder="City">
                         </div>
                         <div class="state">
-                            <input type="text" placeholder="State/Providence">
+                            <input type="text" required placeholder="State/Providence">
                         </div>
                         <div class="zippostal">
                             <input type="text" placeholder="Zip/Postal">
@@ -92,43 +104,84 @@
                     </div>
                     <div class="clearfix"></div>
                 </div>
-            <div class="payment container">
-                <legend>Payment method</legend>
-                <div id="payment" class="payment" action="">
-                    <div class="payment-radio">
-                        <input type="radio" id="creditcard" name="payment" value="creditcard">
-                        <label for="creditcard">Credit Card</label> <img src="img/cart/creditcard.png" width="23" height="16" alt="creditcart">
-                    </div>
-                    <div class="payment-radio">
-                        <input type="radio" id="bancontract" name="payment" value="bancontract">
-                        <label for="bancontract">Bancontract</label> <img src="img/cart/mistercash.png" width="23" height="10" alt="bancontract">
-                    </div>
-                    <div class="payment-radio">
-                        <input type="radio" id="paypal" name="payment" value="paypal">
-                        <label for="paypal">Paypal</label> <img src="img/cart/paypal.png" width="19" height="20" alt="paypal">
-                    </div>
-                    <div class="payment-radio">
-                        <input type="radio" id="banktransfer" name="payment" value="banktransfer">
-                        <label for="banktransfer">Banktransfer</label><img src="img/cart/banktransfer.png" width="19" height="17" alt="banktransfer">
-                    </div>
-                    <div class="payment-radio">
-                        <input type="radio" id="ideal" name="payment" value="ideal">
-                        <label for="ideal">IDEAL</label><img src="img/cart/ideal.png" width="22" height="18" alt="ideal">
-                    </div>
-                    <div class="payment-radio">
-                        <input type="radio" id="sofort" name="payment" value="sofort">
-                        <label for="sofort">SOFORT Banking</label><img src="img/cart/sofort.png" width="21" height="15" alt="sofort">
-                    </div>
-                    <div class="payment-radio">
-                        <input type="radio" id="bitcoin" name="payment" value="bitcoin">
-                        <label for="bitcoin">Bitcoin</label><img src="img/cart/bitcoin.png" width="16" height="20" alt="bitcoin">
+                <div class="payment container">
+                    <h1>Payment method</h1>
+                    <div id="payment" class="payment">
+                        <div class="payment-radio">
+                            <input type="radio" id="creditcard" name="payment" value="creditcard">
+                            <label for="creditcard">Credit Card</label> <img src="img/cart/creditcard.png" width="23" height="16" alt="creditcart">
+                        </div>
+                        <div class="payment-radio">
+                            <input type="radio" id="bancontract" name="payment" value="bancontract">
+                            <label for="bancontract">Bancontract</label> <img src="img/cart/mistercash.png" width="23" height="10" alt="bancontract">
+                        </div>
+                        <div class="payment-radio">
+                            <input type="radio" id="paypal" name="payment" value="paypal">
+                            <label for="paypal">Paypal</label> <img src="img/cart/paypal.png" width="19" height="20" alt="paypal">
+                        </div>
+                        <div class="payment-radio">
+                            <input type="radio" id="banktransfer" name="payment" value="banktransfer">
+                            <label for="banktransfer">Banktransfer</label><img src="img/cart/banktransfer.png" width="19" height="17" alt="banktransfer">
+                        </div>
+                        <div class="payment-radio">
+                            <input type="radio" id="ideal" name="payment" value="ideal">
+                            <label for="ideal">IDEAL</label><img src="img/cart/ideal.png" width="22" height="18" alt="ideal">
+                        </div>
+                        <div class="payment-radio">
+                            <input type="radio" id="sofort" name="payment" value="sofort">
+                            <label for="sofort">SOFORT Banking</label><img src="img/cart/sofort.png" width="21" height="15" alt="sofort">
+                        </div>
+                        <div class="payment-radio">
+                            <input type="radio" id="bitcoin" name="payment" value="bitcoin">
+                            <label for="bitcoin">Bitcoin</label><img src="img/cart/bitcoin.png" width="16" height="20" alt="bitcoin">
+                        </div>
                     </div>
                 </div>
-            </div>
-        </form> <!-- end form -->
+            </form> <!-- end form -->
 
-
-        <div class="wrap">
+            <form action="">
+                <div class="count-form-inner">
+                    <div class="coupon-code">
+                        <input type="number" id="coupon" name="coupon" placeholder="Coupon code">
+                        <button class="coupon_button" type="submit" >Apply </button>
+                        <p>Type your coupone code (if you have), and take 20% discount for your order.</p>
+                    </div>
+                    <div class="proceed-wrap">
+                        <div class="proceed-checkbox">
+                            <input type="checkbox" name="" id="">I accept the <a href="#">Terms & conditions </a>
+                        </div>
+                        <div class="proceed-inner">
+                            <div class="proceed-count">
+                                <table>
+                                    <tr>
+                                        <th></th>
+                                        <th></th>
+                                    </tr>
+                                    <tr>
+                                        <td>Shipping</td>
+                                        <td>$4.95</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Subtotal</td>
+                                        <td>$25</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Total</td>
+                                        <td>$28.50</td>
+                                    </tr>
+                                </table>
+                            </div>
+                            <div class="proceed-payment">
+                                <button class="btn">All books</button>
+                            </div>
+                            <div class="clearfix"></div>
+                        </div>
+                        <div class="clearfix"></div>
+                    </div>
+                </div>
+            </form>
+        </div>
+        <div class="wrap-footer">
         <div class="footer_content container ">
             <div class="footer_section_about">
                 <div class="section_about_header">
@@ -196,22 +249,6 @@
             </div>
         </div>
         </div>
-
-        <div class="billing">
-            <form action="">
-                <p>
-                    <select name="country" id="country" >
-                        <option value="">country</option>
-                        <option value="">USA</option>
-                        <option value="">fr</option>
-                        <option value="">kz</option>
-                        <option value="">ru</option>
-                    </select>
-                </p>
-            </form>
-        </div>
-    </div>
-
     </div> <!-- end your cart> -->
 </body>
 </html>
