--- a/cart.html
+++ b/cart.html
@@ -10,8 +10,10 @@
     <meta property="og:description" content="">
     <meta property="og:image" content=""/>
     <title>Cart</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/responsive.css">
+    <link rel="stylesheet" type="text/css" href="css/cs-select.css" />
+    <link rel="stylesheet" type="text/css" href="css/cs-skin-elastic.css" />
 </head>
 <body>
     <div id="your-cart">
@@ -33,8 +35,9 @@
         </nav>
 
         <div class="cart-wrap container">
-            <form id="cart" class="form-cart" action="">
-                <h1>Billing address</h1>
+            <h1>Your cart</h1>
+            <form id="cart" class="form-cart" >
+                <h2>Billing address</h2>
                 <div class="billing-address">
                     <div class="leftpart">
                         <div class="gender">
@@ -61,18 +64,27 @@
                         <div class="address">
                             <input type="text" required placeholder="address">
                         </div>
+
                         <div class="country">
-                            <form action="">
-                                <p>
-                                    <select name="country" id="country" >
+                            <section>
+                                <select class="cs-select cs-skin-elastic">
+                                    <option value="" disabled selected>Select a Country</option>
+                                    <option value="france" data-class="flag-france">France</option>
+                                    <option value="brazil" data-class="flag-brazil">Brazil</option>
+                                    <option value="argentina" data-class="flag-argentina">Argentina</option>
+                                    <option value="south-africa" data-class="flag-safrica">South Africa</option>
+                                </select>
+                            </section>
+
+                                   <!-- <select name="country" id="country" >
                                         <option value="">country</option>
                                         <option value="">USA</option>
                                         <option value="">fr</option>
                                         <option value="">kz</option>
                                         <option value="">ru</option>
-                                    </select>
-                                </p>
-                            </form>
+                                    </select> -->
+
+
                         </div>
                         <div class="city">
                             <input type="text" required placeholder="City">
@@ -105,7 +117,7 @@
                     <div class="clearfix"></div>
                 </div>
                 <div class="payment container">
-                    <h1>Payment method</h1>
+                    <h2>Payment method</h2>
                     <div id="payment" class="payment">
                         <div class="payment-radio">
                             <input type="radio" id="creditcard" name="payment" value="creditcard">
@@ -139,7 +151,7 @@
                 </div>
             </form> <!-- end form -->
 
-            <form action="">
+            <form >
                 <div class="count-form-inner">
                     <div class="coupon-code">
                         <input type="number" id="coupon" name="coupon" placeholder="Coupon code">
@@ -148,7 +160,7 @@
                     </div>
                     <div class="proceed-wrap">
                         <div class="proceed-checkbox">
-                            <input type="checkbox" name="" id="">I accept the <a href="#">Terms & conditions </a>
+                            <input type="checkbox" name="checkbox" id="checkbox-proceed">I accept the <a href="#">Terms & conditions </a>
                         </div>
                         <div class="proceed-inner">
                             <div class="proceed-count">
@@ -224,7 +236,7 @@
             </div> <!-- footer_section_about -->
             <div class="footer_section_active">
                 <h2>Stay in touch</h2>
-                <form action="" class="subscribe_form">
+                <form class="subscribe_form">
                     <input type="email" id="fname" name="fname" placeholder="Your E-mail">
                     <button class="subscribe_button" type="submit" >Subscribe </button>
                     <!--<img src="img/icons_svg/mail.svg" alt="mail"> -->
@@ -250,5 +262,16 @@
         </div>
         </div>
     </div> <!-- end your cart> -->
+
+    <script src="js/classie.js"></script>
+    <script src="js/selectFx.js"></script>
+    <script>
+        (function() {
+            [].slice.call( document.querySelectorAll( 'select.cs-select' ) ).forEach( function(el) {
+                new SelectFx(el);
+            } );
+        })();
+    </script>
+
 </body>
 </html>
