add select country

--- a/cart.html
+++ b/cart.html
@@ -68,7 +68,7 @@
                         <div class="country">
                             <section>
                                 <select class="cs-select cs-skin-elastic">
-                                    <option value="" disabled selected>Select a Country</option>
+                                    <option value="" disabled selected>Country</option>
                                     <option value="france" data-class="flag-france">France</option>
                                     <option value="brazil" data-class="flag-brazil">Brazil</option>
                                     <option value="argentina" data-class="flag-argentina">Argentina</option>
