--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
             <nav class="menu container">
                 <div class="menu_logo">
                 </div>
-
                 <ul class="menu_list">
                     <li><a href="#">Books</a></li>
                     <li><a href="#">Writers</a></li>
@@ -32,6 +31,7 @@
                     <li><div class="shoppingcart"></div></li>
                     <li> <div class="userpic"></div></li>
                 </ul>
+                <div class="clearfix"></div>
             </nav>
         <div class="bookslide container">
             <div class="bookschoice">
@@ -419,19 +419,23 @@
             <div class="clearfix"></div>
         </div>
     </div> <!-- end container -->
-    <div class="container">
-        <nav class="menu_futer">
-            <ul>
-                <li><a href="#">sitemap</a></li>
-                <li><a href="#">help</a></li>
-                <li><a href="#">delivery</a></li>
-                <li><a href="#">privacy policy</a></li>
-                <li><a href="#">accessibilliti</a></li>
-            </ul>
-        </nav>
-        <div class="clearfix"></div>
-        <hr>
-        <div class="footer_content">
+
+
+
+
+        <div class="wrap-footer">
+            <nav class="menu_futer">
+                <ul>
+                    <li><a href="#">sitemap</a></li>
+                    <li><a href="#">help</a></li>
+                    <li><a href="#">delivery</a></li>
+                    <li><a href="#">privacy policy</a></li>
+                    <li><a href="#">accessibilliti</a></li>
+                </ul>
+            </nav>
+            <div class="clearfix"></div>
+            <hr>
+        <div class="footer_content container">
             <div class="footer_section_about">
                 <div class="section_about_header">
                     <h2>About</h2>
@@ -496,22 +500,10 @@
         <div class="footer_info">
             <p>&#169; 2016 Bookworm. All rights reserved</p>
         </div>
+     </div>
 
-        <div class="billing">
-        <form action="">
-        <p>
-            <select name="country" id="country" >
-                <option value="">country</option>
-                <option value="">USA</option>
-                <option value="">fr</option>
-                <option value="">kz</option>
-                <option value="">ru</option>
-            </select>
-        </p>
-        </form>
-        </div>
-    </div>
-        <script src="node_modules/periodicjs.component.selectfx@1.0.0/example"></script>
+
+
 </body>
 </html>
 
