--- a/cart.html
+++ b/cart.html
@@ -36,64 +36,65 @@
 
         <div class="cart-wrap container">
             <h1>Your cart</h1>
+            <h2>Billing address</h2>
             <form id="cart" class="form-cart" >
-                <h2>Billing address</h2>
                 <div class="billing-address">
                     <div class="leftpart">
                         <div class="gender">
-                            <label>Gender:</label>
+                            <h3>Gender:</h3>
                             <input id="gen-man" type="radio" name="gender" value="man">
                             <label for="gen-man">Man</label>
                             <input id="gen-woman" type="radio" name="gender" value="woman">
                             <label for="gen-woman">Woman</label>
                         </div>
-                        <div class="firstname">
-                            <input type="text" required placeholder="First name">
-                        </div>
-                        <div class="lastname">
-                            <input type="text" required placeholder="Last name">
-                        </div>
-                        <div class="e-mail">
-                            <input type="email" required placeholder="E-mail">
-                        </div>
-                        <div class="phone">
-                            <input type="text" required placeholder="phone">
+                        <div class="form-input">
+                            <div class="input-text">
+                                <p>First name</p>
+                                <input type="text" required >
+                            </div>
+                            <div class="input-text">
+                                <p>Last name</p>
+                                <input type="text" required >
+                            </div>
+                            <div class="input-text">
+                                <p>E-mail</p>
+                                <input type="email" required >
+                            </div>
+                            <div class="input-text">
+                                <p>Phone</p>
+                                <input type="text" required >
+                            </div>
                         </div>
                     </div>
                     <div class="rightpart">
-                        <div class="address">
-                            <input type="text" required placeholder="address">
+                        <div class="input-text-inner">
+                            <p>Address</p>
+                            <input type="text"  required >
                         </div>
-
-                        <div class="country">
-                            <section>
-                                <select class="cs-select cs-skin-elastic">
-                                    <option value="" disabled selected>Country</option>
-                                    <option value="france" data-class="flag-france">France</option>
-                                    <option value="brazil" data-class="flag-brazil">Brazil</option>
-                                    <option value="argentina" data-class="flag-argentina">Argentina</option>
-                                    <option value="south-africa" data-class="flag-safrica">South Africa</option>
-                                </select>
-                            </section>
-
-                                   <!-- <select name="country" id="country" >
-                                        <option value="">country</option>
-                                        <option value="">USA</option>
-                                        <option value="">fr</option>
-                                        <option value="">kz</option>
-                                        <option value="">ru</option>
-                                    </select> -->
-
-
-                        </div>
-                        <div class="city">
-                            <input type="text" required placeholder="City">
-                        </div>
-                        <div class="state">
-                            <input type="text" required placeholder="State/Providence">
-                        </div>
-                        <div class="zippostal">
-                            <input type="text" placeholder="Zip/Postal">
+                        <div class="form-input">
+                            <div class="input-text">
+                                <section>
+                                    <select class="cs-select cs-skin-elastic">
+                                        <option value="" disabled selected>Country</option>
+                                        <option value="france" data-class="flag-france">France</option>
+                                        <option value="brazil" data-class="flag-brazil">Brazil</option>
+                                        <option value="argentina" data-class="flag-argentina">Argentina</option>
+                                        <option value="south-africa" data-class="flag-safrica">South Africa</option>
+                                    </select>
+                                </section>
+                            </div>
+                            <div class="input-text">
+                                <p>City</p>
+                                <input type="text" required >
+                            </div>
+                            <div class="input-text">
+                                <p>State/Providence</p>
+                                <input type="text" required >
+                            </div>
+                            <div class="input-text">
+                                <p>Zip/Postal</p>
+                                <input type="text" >
+                            </div>
                         </div>
                     </div>
                     <div class="clearfix"></div>
@@ -101,7 +102,7 @@
 
                 <div class="shipping-method" >
                     <div class="shipping_left">
-                        <label>Shipping method:</label>
+                        <h3>Shipping method:</h3>
                         <input id="ups_saver" type="radio" name="ups" value="ups_saver">
                         <label for="ups_saver">UPS_SAVER</label> Free
                         <!--<input type="text" name="ups" value="Free"> -->
@@ -111,12 +112,13 @@
                     </div>
                     <div class="shipping_right">
                         <div class="create_account">
-                            <input type="checkbox">Create account for latter use
+                            <input type="checkbox" class="checkbox-create-account" id="checkbox-create">
+                            <label for="checkbox-create">Create account for latter use</label>
                         </div>
                     </div>
                     <div class="clearfix"></div>
                 </div>
-                <div class="payment container">
+                <div class="payment-method container">
                     <h2>Payment method</h2>
                     <div id="payment" class="payment">
                         <div class="payment-radio">
@@ -153,15 +155,19 @@
 
             <form >
                 <div class="count-form-inner">
-                    <div class="coupon-code">
-                        <input type="number" id="coupon" name="coupon" placeholder="Coupon code">
-                        <button class="coupon_button" type="submit" >Apply </button>
-                        <p>Type your coupone code (if you have), and take 20% discount for your order.</p>
+                    <div class="coupon-inner">
+                        <div class="coupon-code">
+                            <input type="number" id="coupon" name="coupon" placeholder="Coupon code">
+                            <button class="coupon_button" type="submit" >Apply </button>
+                            <p>Type your coupone code (if you have), and take 20% discount for your order.</p>
+                        </div>
                     </div>
                     <div class="proceed-wrap">
                         <div class="proceed-checkbox">
-                            <input type="checkbox" name="checkbox" id="checkbox-proceed">I accept the <a href="#">Terms & conditions </a>
+                            <input type="checkbox" id="checkbox-proceed" class="checkbox-accept" >
+                            <label for="checkbox-proceed">I accept the</label> <a href="#">Terms & conditions </a>
                         </div>
+                        <div class="clearfix"></div>
                         <div class="proceed-inner">
                             <div class="proceed-count">
                                 <table>
@@ -190,76 +196,89 @@
                         </div>
                         <div class="clearfix"></div>
                     </div>
+                    <div class="clearfix"></div>
                 </div>
             </form>
         </div>
+
         <div class="wrap-footer">
-        <div class="footer_content container ">
-            <div class="footer_section_about">
-                <div class="section_about_header">
-                    <h2>About</h2>
-                    <p>Cras quis nulla commodo, aliquam lectus sed, blandit augue.
-                        Cras ullamcorper bibendum bibendum. Duis tincidunt urna non pretium porta.
-                        Nam condimentum vitae ligula vel ornare. Phasellus at semper turpis.</p>
-                </div>
-                <div class="footer_section_inner_box">
-                    <div class="footer_section_box">
-                        <div class="section_box">
-                            <h3><a href="#">Ade books</a></h3>
-                            <p>Rare Books & Textbooks</p>
-                        </div>
-                        <div class="section_box">
-                            <h3><a href="#">DpReview</a></h3>
-                            <p>Digital Photography</p>
-                        </div>
-                        <div class="section_box">
-                            <h3><a href="#">Audible</a></h3>
-                            <p>Download Audio Books</p>
-                        </div>
-                    </div>
-                    <div class="footer_section_box">
-                        <div class="section_box">
-                            <h3><a href="#">Junglee</a></h3>
-                            <p>Shop Online in India</p>
-                        </div>
-                        <div class="section_box">
-                            <h3><a href="#">Look</a></h3>
-                            <p>Kids' Clothing & Shoes</p>
-                        </div>
-                        <div class="section_box">
-                            <h3><a href="#">MYHABIT</a></h3>
-                            <p>Private Fashion Designer
-                                Sales</p>
-                        </div>
-                    </div>
-                </div>
-            </div> <!-- footer_section_about -->
-            <div class="footer_section_active">
-                <h2>Stay in touch</h2>
-                <form class="subscribe_form">
-                    <input type="email" id="fname" name="fname" placeholder="Your E-mail">
-                    <button class="subscribe_button" type="submit" >Subscribe </button>
-                    <!--<img src="img/icons_svg/mail.svg" alt="mail"> -->
-                </form>
-                <hr>
-                <div class="footer_social">
-                    <h2>Follow us</h2>
-                    <div class="social_icon">
-                        <ul class="menu_social">
-                            <li><a href="#"><img src="img/icons_svg/facebook.svg" alt="facebook"></a></li>
-                            <li><a href="#"><img src="img/icons_svg/twitter.svg" alt="twitter"></a></li>
-                            <li><a href="#"><img src="img/icons_svg/pinterest.svg" alt="pinterest"></a></li>
-                            <li><a href="#"><img src="img/icons_svg/instagram.svg" alt="instagram"></a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
+            <nav class="menu_futer">
+                <ul>
+                    <li><a href="#">sitemap</a></li>
+                    <li><a href="#">help</a></li>
+                    <li><a href="#">delivery</a></li>
+                    <li><a href="#">privacy policy</a></li>
+                    <li><a href="#">accessibilliti</a></li>
+                </ul>
+            </nav>
             <div class="clearfix"></div>
-            <div class="footer_info">
-                <p>&#169; 2016 Bookworm. All rights reserved</p>
-                <hr>
+            <hr>
+            <div class="footer_content container ">
+                <div class="footer_section_about">
+                    <div class="section_about_header">
+                        <h2>About</h2>
+                        <p>Cras quis nulla commodo, aliquam lectus sed, blandit augue.
+                            Cras ullamcorper bibendum bibendum. Duis tincidunt urna non pretium porta.
+                            Nam condimentum vitae ligula vel ornare. Phasellus at semper turpis.</p>
+                    </div>
+                    <div class="footer_section_inner_box">
+                        <div class="footer_section_box">
+                            <div class="section_box">
+                                <h3><a href="#">Ade books</a></h3>
+                                <p>Rare Books & Textbooks</p>
+                            </div>
+                            <div class="section_box">
+                                <h3><a href="#">DpReview</a></h3>
+                                <p>Digital Photography</p>
+                            </div>
+                            <div class="section_box">
+                                <h3><a href="#">Audible</a></h3>
+                                <p>Download Audio Books</p>
+                            </div>
+                        </div>
+                        <div class="footer_section_box">
+                            <div class="section_box">
+                                <h3><a href="#">Junglee</a></h3>
+                                <p>Shop Online in India</p>
+                            </div>
+                            <div class="section_box">
+                                <h3><a href="#">Look</a></h3>
+                                <p>Kids' Clothing & Shoes</p>
+                            </div>
+                            <div class="section_box">
+                                <h3><a href="#">MYHABIT</a></h3>
+                                <p>Private Fashion Designer
+                                    Sales</p>
+                            </div>
+                        </div>
+                    </div>
+                </div> <!-- footer_section_about -->
+                <div class="footer_section_active">
+                    <h2>Stay in touch</h2>
+                    <form class="subscribe_form">
+                        <input type="email" id="fname" name="fname" placeholder="Your E-mail">
+                        <button class="subscribe_button" type="submit" >Subscribe </button>
+                        <!--<img src="img/icons_svg/mail.svg" alt="mail"> -->
+                    </form>
+                    <hr>
+                    <div class="footer_social">
+                        <h2>Follow us</h2>
+                        <div class="social_icon">
+                            <ul class="menu_social">
+                                <li><a href="#"><img src="img/icons_svg/facebook.svg" alt="facebook"></a></li>
+                                <li><a href="#"><img src="img/icons_svg/twitter.svg" alt="twitter"></a></li>
+                                <li><a href="#"><img src="img/icons_svg/pinterest.svg" alt="pinterest"></a></li>
+                                <li><a href="#"><img src="img/icons_svg/instagram.svg" alt="instagram"></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="clearfix"></div>
+                <div class="footer_info">
+                    <p>&#169; 2016 Bookworm. All rights reserved</p>
+                    <hr>
+                </div>
             </div>
-        </div>
         </div>
     </div> <!-- end your cart> -->
 
@@ -275,3 +294,4 @@
 
 </body>
 </html>
+
