mofifiwd form input and coupon code table

--- a/cart.html
+++ b/cart.html
@@ -159,38 +159,36 @@
                         <div class="coupon-code">
                             <input type="number" id="coupon" name="coupon" placeholder="Coupon code">
                             <button class="coupon_button" type="submit" >Apply </button>
-                            <p>Type your coupone code (if you have), and take 20% discount for your order.</p>
+                             <p>Type your coupone code (if you have), and take 20% discount for your order.</p>
+
                         </div>
                     </div>
                     <div class="proceed-wrap">
                         <div class="proceed-checkbox">
                             <input type="checkbox" id="checkbox-proceed" class="checkbox-accept" >
-                            <label for="checkbox-proceed">I accept the</label> <a href="#">Terms & conditions </a>
+                            <label for="checkbox-proceed">I accept the</label>
+                            <a href="#">Terms & conditions </a>
                         </div>
                         <div class="clearfix"></div>
                         <div class="proceed-inner">
                             <div class="proceed-count">
                                 <table>
                                     <tr>
-                                        <th></th>
-                                        <th></th>
+                                        <td><span class="proceed-count-font1">Shipping</span></td>
+                                        <td><span class="proceed-count-font2">$4.95</span></td>
                                     </tr>
                                     <tr>
-                                        <td>Shipping</td>
-                                        <td>$4.95</td>
+                                        <td><span class="proceed-count-font1">Subtotal</span></td>
+                                        <td> <span class="proceed-count-font2">$25</span></td>
                                     </tr>
                                     <tr>
-                                        <td>Subtotal</td>
-                                        <td>$25</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Total</td>
-                                        <td>$28.50</td>
+                                        <td><span class="proceed-count-font3"> Total</span></td>
+                                        <td><span class="proceed-count-font4"> $28.50</span></td>
                                     </tr>
                                 </table>
                             </div>
                             <div class="proceed-payment">
-                                <button class="btn">All books</button>
+                                <button class="btn">Proceed to payment</button>
                             </div>
                             <div class="clearfix"></div>
                         </div>
